# OS

lab 3/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  main.cpp  myArray.h
lab2 boost/: CMakeLists.txt  main.cpp
lab3 c++17/: Thread_info.h  main.cpp
lab4/: CMakeLists.txt  Reciever.cpp  Sender.cpp
lab5/: CMakeLists.txt  employee.h
lab5/Client/: main.cpp
lab5/Server/: Main.cpp
untitled/: CMakeLists.txt  creator.cpp  employee.h  main.cpp  reporter.cpp
